# appmodlab-squad-driven-feature-development

./: .gitignore  APPMODLAB.MD  README.md
assets/: imagegen.md
assets/outputs/: step-01-explore-app.txt  step-02-initialize-squad.txt  step-03-feature-planning.txt  step-04-backend-impl.txt  step-05-frontend-impl.txt  step-06-test-suite.txt  step-07-code-review.txt  step-08-documentation.txt  step-09-retrospective.txt
assets/screenshots/: 01-project-structure.html  02-docker-compose.html  03-api-server-ts.html  04-ml-service-main-py.html  05-database-schema.html  06-ci-workflow.html  07-product-service-ts.html  08-seed-data-overview.html
docs/: REVIEW-API.md
shopsmart/: .gitignore  README.md  docker-compose.yml
shopsmart/.github/workflows/: ci.yml
shopsmart/api/: Dockerfile  package.json
shopsmart/api/src/: config.ts  server.ts
shopsmart/api/src/modules/orders/: order.routes.ts  order.service.ts  order.types.ts
shopsmart/api/src/modules/products/: product.routes.ts  product.schema.ts  product.service.ts  product.types.ts
shopsmart/api/src/plugins/: database.ts  redis.ts
shopsmart/api/src/utils/: auth.ts  errors.ts
shopsmart/api/tests/: orders.test.ts  products.test.ts  reviews.test.ts
shopsmart/database/: schema.sql  seed.sql
shopsmart/ml-service/: Dockerfile  pyproject.toml
shopsmart/ml-service/src/: config.py  main.py
shopsmart/ml-service/src/models/: recommendation.py
shopsmart/ml-service/src/recommendations/: engine.py  router.py
shopsmart/ml-service/tests/: test_main.py  test_recommendations.py
(+7 files in other folders)
