[tool.poetry]
name = "shopsmart-ml-service"
version = "1.0.0"
description = "ShopSmart ML recommendation service"
authors = ["ShopSmart Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
numpy = "^1.26.3"
pandas = "^2.1.4"
scikit-learn = "^1.4.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"
black = "^24.1.1"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
